Documentando Batteries e Session
